--- a/src/main/resources/templates/layout/page-layout.html
+++ b/src/main/resources/templates/layout/page-layout.html
@@ -1,6 +1,8 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en" th:fragment="page(title)">
     <th:block th:replace="~{fragments/page/page-head::header(title=${title})}" />
     <body>
-        <th:block th:replace="~{::page-layout-content}" />
+        <div class="page-layout">
+            <th:block th:replace="~{::page-layout-content}" />
+        </div>
     </body>
 </html>
