--- a/src/main/resources/sass/index.scss
+++ b/src/main/resources/sass/index.scss
@@ -1,3 +1,6 @@
-body {
-  font-family: sans-serif, "Abyssinica SIL";
-}
+@import "abstracts";
+
+@import "base";
+
+@import "components";
+@import "layout";
