--- a/src/main/resources/templates/fragments/page/header.html
+++ b/src/main/resources/templates/fragments/page/header.html
@@ -1,3 +1,12 @@
-<div>
-    Some header
-</div>
+<header class="header">
+    <div class="header__nav-component">
+        *Buritto* Some logo there idk
+    </div>
+    <div class="header__nav-component">
+        <nav class="header__nav-component--navigation">
+            <a>Some Link</a>
+            <a>Some Link</a>
+            <a>Some Link</a>
+        </nav>
+    </div>
+</header>
